--- a/index.pug
+++ b/index.pug
@@ -17,3 +17,4 @@ html(lang="en")
             include ./assets/layout/introduce.pug
             include ./assets/layout/popular.pug
             include ./assets/layout/quanlity.pug
+            include ./assets/layout/reviews.pug
