--- a/assets/layout/home.pug
+++ b/assets/layout/home.pug
@@ -30,8 +30,8 @@ section.home
             .hero__content-right 
                 .image 
                     img(src="./assets/img/hero_img.jpg", alt="")
-                .reviews 
-                    p.reviews__title Our active Student 
+                .review 
+                    p.review__title Our active Student 
                     each val in["./assets/img/avtar1.jpg","./assets/img/avtar2.jpg", "./assets/img/avtar3.jpeg", "./assets/img/avtar4.jfif", "./assets/img/avtar1.jpg"]
                         img(src=val , alt="")
                 .courses 
