--- a/index.pug
+++ b/index.pug
@@ -18,3 +18,5 @@ html(lang="en")
             include ./assets/layout/popular.pug
             include ./assets/layout/quanlity.pug
             include ./assets/layout/reviews.pug
+            include ./assets/layout/suprise.pug
+            include ./assets/layout/footer.pug
