--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -469,4 +469,42 @@ a {
   margin-bottom: 50px;
 }
 
+.loader {
+  min-height: 100vh;
+  z-index: 2;
+  display: grid;
+  place-items: center;
+}
+.loader .spinner {
+  width: 65px;
+  height: 65px;
+  display: grid;
+  border: 4.5px solid rgba(0, 0, 0, 0);
+  border-radius: 50%;
+  border-color: #dbdcef rgba(0, 0, 0, 0);
+  animation: spinner-e04l1k 1s infinite linear;
+}
+.loader .spinner::before,
+.loader .spinner::after {
+  content: "";
+  grid-area: 1/1;
+  margin: 2.2px;
+  border: inherit;
+  border-radius: 50%;
+}
+.loader .spinner::before {
+  border-color: #474bff rgba(0, 0, 0, 0);
+  animation: inherit;
+  animation-duration: 0.5s;
+  animation-direction: reverse;
+}
+.loader .spinner::after {
+  margin: 8.9px;
+}
+@keyframes spinner-e04l1k {
+  100% {
+    transform: rotate(1turn);
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
