--- a/index.pug
+++ b/index.pug
@@ -13,6 +13,7 @@ html(lang="en")
         link(rel="stylesheet", href="./assets/css/main.css")
     body 
         section.wrapper
+            .loader 
             include ./assets/layout/home.pug
             include ./assets/layout/introduce.pug
             include ./assets/layout/popular.pug
@@ -20,3 +21,4 @@ html(lang="en")
             include ./assets/layout/reviews.pug
             include ./assets/layout/suprise.pug
             include ./assets/layout/footer.pug
+        script(src="./assets/js/script.js") 
