--- a/index.pug
+++ b/index.pug
@@ -13,7 +13,7 @@ html(lang="en")
         link(rel="stylesheet", href="./assets/css/main.css")
     body 
         section.wrapper
-            .loader 
+            section.loader 
             include ./assets/layout/home.pug
             include ./assets/layout/introduce.pug
             include ./assets/layout/popular.pug
