--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -482,7 +482,7 @@ a {
   border: 4.5px solid rgba(0, 0, 0, 0);
   border-radius: 50%;
   border-color: #dbdcef rgba(0, 0, 0, 0);
-  animation: spinner-e04l1k 1s infinite linear;
+  animation: spinner 1s infinite linear;
 }
 .loader .spinner::before,
 .loader .spinner::after {
@@ -501,7 +501,7 @@ a {
 .loader .spinner::after {
   margin: 8.9px;
 }
-@keyframes spinner-e04l1k {
+@keyframes spinner {
   100% {
     transform: rotate(1turn);
   }
